fixing boolean dropdowns not being visible on chrome

--- a/src/app/query/containers/bool/individual/bool-term.component.css
+++ b/src/app/query/containers/bool/individual/bool-term.component.css
@@ -1,5 +1,4 @@
 .options {
-  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 90%;
